--- a/Sito1/pages/index.html
+++ b/Sito1/pages/index.html
@@ -6,12 +6,10 @@
     </head>
     <body>
         <ol type="1">
-            <li>Primo</li>
-            <li>Secondo</li>
-            <li>Terzo</li>
-            <li>Quarto</li>
-            <li>Quinto</li>
+            <li><a href="pag2.html">Primo</a></li>
+            <li><a href="pag3.html">Secondo</a></li>
+            <li><a href="pag4.html">Terzo</a></li>
+            <li><a href="pag5.html">Quarto</a></li>
         </ol>
-        <a href="pag2.html">pagina 2</a>
         </body>
 </html>
