feat: added quarto, quinto, sesto home menu pages

--- a/Sito1/pages/index.html
+++ b/Sito1/pages/index.html
@@ -5,11 +5,14 @@
         <title>Beleeve - home</title>
     </head>
     <body>
+        <h1>Le mie canzoni (video) preferiti</h1>
         <ol type="1">
             <li><a href="pag2.html">Primo</a></li>
             <li><a href="pag3.html">Secondo</a></li>
             <li><a href="pag4.html">Terzo</a></li>
             <li><a href="pag5.html">Quarto</a></li>
+            <li><a href="pag6.html">Quinto</a></li>
+            <li><a href="pag7.html">Sesto</a></li>
         </ol>
         </body>
 </html>
