--- a/Sito1/pages/pag2.html
+++ b/Sito1/pages/pag2.html
@@ -6,14 +6,14 @@
     </head>
     <body>
         <a href="index.html">
-            <img src="../media/logo2.png">
+            <img class="home" src="../media/logo2.png">
         </a>
-            <h3>
-                testo
-                testo
-                testi
-            </h3>
-            <img src="../media/download.jpg">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/EXNAKBq7kMA?si=bauIq04I22NnvKfP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <img class="aaa" src="../media/download.jpg">
+        <h3>
+            testo3fgsdg <br>
+            testodsfgdsfh <br>
+            testidsfhsdh <br>
+        </h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/EXNAKBq7kMA?si=bauIq04I22NnvKfP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
