--- a/Sito1/pages/pag3.html
+++ b/Sito1/pages/pag3.html
@@ -6,14 +6,14 @@
     </head>
     <body>
         <a href="index.html">
-            <img src="../media/logo2.png">
+            <img class="home" src="../media/logo2.png">
         </a>
-            <h3>
-                testo2
-                testo3
-                testi4
-            </h3>
-            <img src="../media/download2.jpg">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xt66L_2kBsI?si=m8q_k2qifWUcMWxD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <img class="aaa" src="../media/download2.jpg">
+        <h3>
+            testo2 <br>
+            testo3 <br>
+            testi4 <br>
+        </h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xt66L_2kBsI?si=m8q_k2qifWUcMWxD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
