--- a/pages/pag4.html
+++ b/pages/pag4.html
@@ -5,7 +5,7 @@
         <title>Beleeve - home</title>
     </head>
     <body>
-        <a href="index.html">
+        <a href="../index.html">
             <img class="home" src="../media/logo2.png">
         </a>
         <img class="aaa" src="../media/download.jpg">
