--- a/pages/pag6.html
+++ b/pages/pag6.html
@@ -5,7 +5,7 @@
         <title>Beleeve - home</title>
     </head>
     <body>
-        <a href="index.html">
+        <a href="../index.html">
             <img class="home" src="../media/logo2.png">
         </a>
         <img class="aaa" src="../media/download3.jpg">
@@ -14,6 +14,6 @@
             testo435 <br>
             testi65 <br>
         </h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/w8SG2V3n4-U?si=rgZW0VukLLrMEhCJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RfUwdIxiVUw?si=kAgkdPQhrkAZWTMn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
