feat: moved list to table

--- a/index.html
+++ b/index.html
@@ -14,5 +14,52 @@
             <li><a href="pages/pag6.html">Quinto</a></li>
             <li><a href="pages/pag7.html">Sesto</a></li>
         </ol>
-        </body>
+        <table>
+            <tr>
+                <th rowspan="2">titolo</th>
+                <th colspan="2">indentità</th>
+                <th rowspan="2">durata</th>
+                <th rowspan="2">link</th>
+            </tr>
+            <tr>
+                <th>nome</th>
+                <th>cognome</th>
+            </tr>
+            <tr>
+                <td><a href="pages/pag3.html">Dario moccia</a></td>
+                <td>Dario</td>
+                <td>Moccia</td>
+                <td>5min</td>
+                <td><a href="https://youtu.be/EXNAKBq7kMA">link</a></td>
+            </tr>
+            <tr>
+                <td><a href="pages/pag4.html">La capra è bella</a></td>
+                <td>Manifestazione</td>
+                <td>Donna</td>
+                <td>2min</td>
+                <td><a href="https://youtu.be/QjvpjXdgugA">link</a></td>
+            </tr>
+            <tr>
+                <td><a href="pages/pag5.html">Defcon</a></td>
+                <td>Alan</td>
+                <td>Walker</td>
+                <td>Tutututttrtutrtururutu *smurf cat*</td>
+                <td><a href="https://youtu.be/w8SG2V3n4-U">link</a></td>
+            </tr>
+            <tr>
+                <td><a href="pages/pag6.html">Mrbeast</a></td>
+                <td>Jimmy</td>
+                <td>Endrix</td>
+                <td>6min</td>
+                <td><a href="https://youtu.be/RfUwdIxiVUw">link</a></td>
+            </tr>
+            <tr>
+                <td><a href="pages/pag7.html">Odio le assicurazioni</a></td>
+                <td>MrRip</td>
+                <td>RetireInProgress</td>
+                <td>10min</td>
+                <td><a href="https://youtu.be/dDmnO2TKVro">link</a></td>
+            </tr>
+        </table>
+    </body>
 </html>
