feat: moved list to table 2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="https://marco-bert.github.io/Sito1.github.io/style/style.css">
         <title>Beleeve - home</title>
     </head>
     <body>
