feat: new images in the table

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <th colspan="2">indentità</th>
                 <th rowspan="2">durata</th>
                 <th rowspan="2">link</th>
+                <th rowspan="2">copertina</th>
             </tr>
             <tr>
                 <th>nome</th>
@@ -31,6 +32,7 @@
                 <td>Moccia</td>
                 <td>5min</td>
                 <td><a href="https://youtu.be/EXNAKBq7kMA">link</a></td>
+                <td><img class="img2" src="./media/download4.jpg"></td>
             </tr>
             <tr>
                 <td><a href="pages/pag4.html">La capra è bella</a></td>
@@ -38,6 +40,7 @@
                 <td>Donna</td>
                 <td>2min</td>
                 <td><a href="https://youtu.be/QjvpjXdgugA">link</a></td>
+                <td><img class="img2" src="./media/download.jpg"></td>
             </tr>
             <tr>
                 <td><a href="pages/pag5.html">Defcon</a></td>
@@ -45,6 +48,7 @@
                 <td>Walker</td>
                 <td>Tutututttrtutrtururutu *smurf cat*</td>
                 <td><a href="https://youtu.be/w8SG2V3n4-U">link</a></td>
+                <td><img class="img2" src="./media/Bee_Artwork.webp"></td>
             </tr>
             <tr>
                 <td><a href="pages/pag6.html">Mrbeast</a></td>
@@ -52,6 +56,7 @@
                 <td>Endrix</td>
                 <td>6min</td>
                 <td><a href="https://youtu.be/RfUwdIxiVUw">link</a></td>
+                <td><img class="img2" src="./media/download2.jpg"></td>
             </tr>
             <tr>
                 <td><a href="pages/pag7.html">Odio le assicurazioni</a></td>
@@ -59,6 +64,7 @@
                 <td>RetireInProgress</td>
                 <td>10min</td>
                 <td><a href="https://youtu.be/dDmnO2TKVro">link</a></td>
+                <td><img class="img2" src="./media/download3.jpg"></td>
             </tr>
         </table>
     </body>
